force-app/main/default/objects/Message__c/fields/CRM_From__c.field-meta.xml
<CustomField>
    <fullName>CRM_From__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>From</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Messages1awlkdjaw</relationshipName>
    <type>Lookup</type>
</CustomField>