force-app/main/default/objects/Message__c/fields/CRM_From_First_Name__c.field-meta.xml
<CustomField>
    <fullName>CRM_From_First_Name__c</fullName>
    <description></description>
    <formula>
    IF( CRM_From_Contact__c != null,
		CRM_From_Contact__r.FirstName,
        IF(CRM_From_User__c != null,
		    CRM_From_User__r.FirstName,
            CRM_From_Ident__c 
        )
    )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>From First Name</label>
    <type>Text</type>
</CustomField>