force-app/main/default/objects/Message__c/fields/CRM_From_Ident__c.field-meta.xml
<CustomField>
    <fullName>CRM_From_Ident__c</fullName>
    <description>NAV ident of the user sending the message.</description>
    <externalId>true</externalId>
    <label>From Ident</label>
    <length>7</length>
    <type>Text</type>
</CustomField>