force-app/main/default/objects/Message__c/fields/CRM_From_Ident_Formula__c.field-meta.xml
<CustomField>
    <fullName>CRM_From_Ident_Formula__c</fullName>
    <description>For messages migrated that were sent from NAV employees without a Salesforce user, the CRM_From_Ident__c field will store the from information. Messages created in Salesforce will be connected to either a community user or internal user. Returns the external users actor id if the message is from external.</description>
    <formula>IF( CRM_From__c != null,
    (IF( CRM_From__r.ContactId != null,
		CRM_From__r.Contact.Account.CRM_Person__r.INT_ActorId__c,
		CRM_From__r.CRM_NAV_Ident__c 
	)),
	CRM_From_Ident__c 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>From Ident Formula</label>
    <type>Text</type>
</CustomField>