force-app/main/default/objects/Message__c/fields/CRM_From_Integration_Name__c.field-meta.xml
<CustomField>
    <fullName>CRM_From_Integration_Name__c</fullName>
    <formula>IF(CreatedBy.CRM_Integration_User__c, &apos;NAV&apos;, CRM_From_Label__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>From Integration Name</label>
    <type>Text</type>
</CustomField>