force-app/main/default/objects/Message__c/fields/CRM_From_NAV_Unit__c.field-meta.xml
<CustomField>
    <fullName>CRM_From_NAV_Unit__c</fullName>
    <description>NAV unit number of the user sending the message</description>
    <externalId>true</externalId>
    <label>From NAV Unit</label>
    <length>4</length>
    <type>Text</type>
</CustomField>