force-app/main/default/objects/Message__c/fields/CRM_From_User__c.field-meta.xml
<CustomField>
    <fullName>CRM_From_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>From User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>User_Messages</relationshipName>
    <type>Lookup</type>
</CustomField>