force-app/main/default/objects/Message__c/fields/CRM_HenvendelseId__c.field-meta.xml
<CustomField>
    <fullName>CRM_HenvendelseId__c</fullName>
    <description>Reference to unique henvendelse ID which is the kafka message key</description>
    <externalId>true</externalId>
    <label>Henvendelse ID</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>