force-app/main/default/objects/Message__c/fields/CRM_Message_Content__c.field-meta.xml
<CustomField>
    <fullName>CRM_Message_Content__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Lookup to the message content to provide access controlled to the message text</description>
    <label>Message Content</label>
    <referenceTo>Message_Content__c</referenceTo>
    <relationshipLabel>Messages</relationshipLabel>
    <relationshipName>Messages</relationshipName>
    <type>Lookup</type>
</CustomField>