force-app/main/default/objects/Message__c/fields/CRM_Owner_Department__c.field-meta.xml
<CustomField>
    <fullName>CRM_Owner_Department__c</fullName>
    <formula>CreatedBy.Department</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner Department</label>
    <type>Text</type>
</CustomField>