force-app/main/default/objects/Message__c/fields/CRM_Read__c.field-meta.xml
<CustomField>
    <fullName>CRM_Read__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Read</label>
    <type>Checkbox</type>
</CustomField>