force-app/main/default/objects/Message__c/fields/CRM_Sent_date__c.field-meta.xml
<CustomField>
    <fullName>CRM_Sent_date__c</fullName>
    <label>Sent date</label>
    <type>DateTime</type>
</CustomField>