force-app/main/default/objects/Message__c/fields/CRM_Sent_Datetime_Formula__c.field-meta.xml
<CustomField>
    <fullName>CRM_Sent_Datetime_Formula__c</fullName>
    <description>Returns the date and time the message was created. For data which was migrated this results in the timestamp from the Date time registered field, after migration this defaults to system timestamps.</description>
    <formula>IF(ISBLANK(CRM_Sent_date__c),
			 CreatedDate,
			 CRM_Sent_date__c
			)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Registered Datetime Formula</label>
    <type>DateTime</type>
</CustomField>