force-app/main/default/objects/Message__c/fields/CRM_Thread__c.field-meta.xml
<CustomField>
    <fullName>CRM_Thread__c</fullName>
    <label>Thread</label>
    <referenceTo>Thread__c</referenceTo>
    <relationshipLabel>Messages</relationshipLabel>
    <relationshipName>Messages</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>