force-app/main/default/objects/Message__c/fields/CRM_Type__c.field-meta.xml
<CustomField>
    <fullName>CRM_Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Message</fullName>
                <default>true</default>
                <label>Message</label>
            </value>
            <value>
                <fullName>Event</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>